# agentlink

./: .github\workflows\ci.yml  .gitignore  LICENSE  README.md  README_zh.md  agentlink\__init__.py  agentlink\adapters\__init__.py  agentlink\adapters\a2a_adapter.py  agentlink\adapters\autogen_adapter.py  agentlink\adapters\base.py  agentlink\adapters\crewai_adapter.py  agentlink\adapters\generic.py  agentlink\adapters\langgraph_adapter.py  agentlink\adapters\mcp.py  agentlink\extensions\__init__.py  agentlink\extensions\mcp_hub.py  agentlink\protocol\__init__.py  agentlink\protocol\capability.py  agentlink\protocol\message.py  agentlink\protocol\routing.py  agentlink\runtime\__init__.py  agentlink\runtime\bus.py  agentlink\runtime\node.py  agentlink\runtime\registry.py  examples\01_quickstart.py  examples\02_cross_framework.py  examples\03_capability_routing.py  examples\04_real_integration.py  examples\05_async_streaming.py  examples\06_a2a_protocol.py  examples\06_mcp_hub.py  push.bat  pyproject.toml  tests\test_agentlink.py
.github/workflows/: ci.yml
agentlink/: __init__.py
agentlink/adapters/: __init__.py  a2a_adapter.py  autogen_adapter.py  base.py  crewai_adapter.py  fastmcp_adapter.py  feishu.py  generic.py  langgraph_adapter.py  mcp.py  memory.py  openai_assistant.py  wecom.py
agentlink/protocol/: capability.py  message.py  routing.py
agentlink/runtime/: bus.py  node.py  registry.py
docs/: message-patterns.md
examples/: 01_quickstart.py  02_cross_framework.py  03_capability_routing.py  04_real_integration.py  05_async_streaming.py  06_a2a_protocol.py  06_mcp_hub.py  mcp_bridge.py
tests/: test_agentlink.py  test_fastmcp_adapter.py  test_mcp.py
